welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:26: error: not found: value c
	if (c == couleur ) {
            ^